fix(browser): Refactor loading to make it work on Firefox and Edge on a PC Closes #559

--- a/src/content/styles/modules/_summary.scss
+++ b/src/content/styles/modules/_summary.scss
@@ -37,6 +37,10 @@
         color: $alert-color;
     }
 
+    .av-preview-enable {
+        background-color: #fae0e3;
+    }
+
     .av-version {
         text-align: center;
         margin: rem(3.6) rem(1.2) rem(1.2) rem(1.2);
